@@ -14,6 +14,7 @@
 - Fix: [#441] Construction rights over entrance path erased (original bug)
 - Fix: [#578] Ride ghosts show up in ride list during construction (original bug)
 - Fix: [#597] 'Finish 5 roller coasters' goal not properly checked (original bug)
+- Fix: [#667] Incorrect banner limit calculation (original bug)
 - Fix: [#739] Crocodile Ride (Log Flume) never allows more than five boats (original bug)
 - Fix: [#837] Can't move windows on title screen to where the toolbar would be (original bug)
 - Fix: [#1705] Time Twister's Medieval entrance has incorrect scrolling (original bug)
